--- a/qcom/opensource/wlan/qcacld-3.0/Kbuild
+++ b/qcom/opensource/wlan/qcacld-3.0/Kbuild
@@ -15,6 +15,9 @@ ifeq ($(KERNEL_BUILD), y)
 	WLAN_COMMON_INC := $(WLAN_ROOT)/$(WLAN_COMMON_ROOT)
 	WLAN_FW_API := $(WLAN_ROOT)/../fw-api/
 	WLAN_PROFILE := default
+	ifeq ($(CONFIG_ARCH_KHAJE), y)
+            WLAN_PROFILE := qca6390
+        endif
 endif
 
 WLAN_COMMON_ROOT ?= cmn
