--- a/qcom/opensource/graphics-kernel/Makefile
+++ b/qcom/opensource/graphics-kernel/Makefile
@@ -3,7 +3,8 @@ CUR_MKFILE = $(abspath $(lastword $(MAKEFILE_LIST)))
 KGSL_MODULE_ROOT = $(dir $(CUR_MKFILE))
 endif
 
-KBUILD_OPTIONS+=KGSL_PATH=$(KGSL_MODULE_ROOT)
+KBUILD_OPTIONS += KGSL_PATH=$(KGSL_MODULE_ROOT)
+KBUILD_OPTIONS += MODNAME=msm_kgsl
 
 all: modules
 
