audio-kernel: Enable compilation for monaco
Add & guard the dlkm's with target specifig tags.
Add target config entries in kconfig.

Change-Id: Id8e019095916ba7d658d674999a367223ed68bff
Signed-off-by: Wasim Nazir <quic_wasimn@quicinc.com>

--- a/ipc/Kbuild
+++ b/ipc/Kbuild
@@ -71,6 +71,10 @@ ifeq ($(KERNEL_BUILD), 0)
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/bengalautoconf.h
 	endif
+	ifeq ($(CONFIG_ARCH_MONACO), y)
+		include $(AUDIO_ROOT)/config/monacoauto.conf
+		INCS    +=  -include $(AUDIO_ROOT)/config/monacoautoconf.h
+	endif
 	ifeq ($(CONFIG_ARCH_SM8150), y)
 		ifdef CONFIG_SND_SOC_SA8155
 			include $(AUDIO_ROOT)/config/sa8155auto.conf
