ipc: Update domain id as per host processor
- Update the audpkt name based on  domain
- Fix the state update in audio-pkt driver

Change-Id: Ic598a2baf6775c6d49e8c0fbff9dd04fc70073f1
Signed-off-by: Satish Babu Patakokila <quic_spatakok@quicinc.com>

--- a/config/sdxpinnauto.conf
+++ b/config/sdxpinnauto.conf
@@ -14,6 +14,7 @@ export CONFIG_AUDIO_PKT=m
 export CONFIG_AUDIO_PKT_ION=m
 export CONFIG_SPF_CORE=m
 export CONFIG_AUDIO_PRM=m
+export CONFIG_AUDIO_GPR_DOMAIN_MODEM=m
 export CONFIG_MSM_ADSP_LOADER=m
 export CONFIG_REGMAP_SWR=m
 export CONFIG_MSM_QDSP6_SSR=m
