touch: pineapple: enable touch drivers for pineapple
Add touch config files and enable for pineapple platform

Change-Id: Ibad6ce0e661a5d2c0e8794573e18abbf1fe2b88f
Signed-off-by: Simranjeet Thind <quic_sthind@quicinc.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,10 @@ ifeq ($(TARGET_SUPPORT),genericarmv8)
 	KBUILD_OPTIONS += CONFIG_ARCH_WAIPIO=y
 endif
 
+ifeq ($(TARGET_SUPPORT),genericarmv8)
+	KBUILD_OPTIONS += CONFIG_ARCH_PINEAPPLE=y
+endif
+
 all:
 	$(MAKE) -C $(KERNEL_SRC) M=$(M) modules $(KBUILD_OPTIONS)
 
