--- a/config/sa525mauto.conf
+++ b/config/sa525mauto.conf
@@ -6,6 +6,7 @@ export CONFIG_AUDIO_PKT=m
 export CONFIG_AUDIO_PKT_ION=m
 export CONFIG_SPF_CORE=m
 export CONFIG_AUDIO_PRM=m
+export CONFIG_AUDIO_GPR_DOMAIN_MODEM=m
 export CONFIG_MSM_ADSP_LOADER=m
 export CONFIG_MSM_QDSP6_SSR=m
 export CONFIG_MSM_QDSP6_PDR=m
