asoc: bring up AudioReach for SA8295 GVM
Enable AudioReach of LV GVM on SA8295.

Change-Id: Ib16bca6a97a8303ca8707b874781021e92843c54
Signed-off-by: Deru Wang <quic_deruwang@quicinc.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -80,6 +80,11 @@ KBUILD_OPTIONS += CONFIG_SND_SOC_SA6155=m
 endif
 endif
 
+ifeq ($(AUTO_GVM), yes)
+KBUILD_OPTIONS += CONFIG_SND_SOC_AUTO=y
+KBUILD_OPTIONS += CONFIG_SND_SOC_GVM=y
+endif
+
 ifeq ($(TARGET_SUPPORT), $(filter $(TARGET_SUPPORT), lemans))
 KBUILD_OPTIONS += CONFIG_SND_SOC_AUTO=y
 KBUILD_OPTIONS += CONFIG_SND_SOC_SA8255=m
