--- a/asoc/Kbuild
+++ b/asoc/Kbuild
@@ -30,6 +30,11 @@ ifeq ($(CONFIG_SND_SOC_AUTO), y)
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sa6155autoconf.h
 	endif
+	ifdef CONFIG_SND_SOC_GVM
+		include $(AUDIO_ROOT)/config/gvmauto.conf
+		export
+		INCS    +=  -include $(AUDIO_ROOT)/config/gvmautoconf.h
+	endif
 	ifdef CONFIG_SND_SOC_SA8255
 		include $(AUDIO_ROOT)/config/sa8255auto.conf
 		export
@@ -228,6 +233,11 @@ ifdef CONFIG_SND_SOC_SA8255_AUTO_SPF
 	MACHINE_OBJS += auto_spf_dummy.o
 endif
 
+# for gvm sound card driver
+ifdef CONFIG_SND_SOC_GVM_AUTO_SPF
+	SPF_MACHINE_OBJS += gvm_auto_spf_dummy.o
+endif
+
 ifdef CONFIG_SND_SOC_QDSP6V2
 	PLATFORM_OBJS += platform_init.o
 endif
@@ -326,6 +336,9 @@ machine_dlkm-y := $(MACHINE_OBJS)
 
 obj-$(CONFIG_SND_SOC_SA8255_AUTO_SPF) += spf_machine_dlkm.o
 spf_machine_dlkm-y := $(MACHINE_OBJS)
+
+obj-$(CONFIG_SND_SOC_GVM_AUTO_SPF) += spf_machine_dlkm.o
+spf_machine_dlkm-y := $(SPF_MACHINE_OBJS)
 
 # inject some build related information
 DEFINES += -DBUILD_TIMESTAMP=\"$(shell date -u +'%Y-%m-%dT%H:%M:%SZ')\"
