--- a/soc/Kbuild
+++ b/soc/Kbuild
@@ -30,6 +30,11 @@ ifeq ($(CONFIG_SND_SOC_AUTO), y)
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sa6155autoconf.h
 	endif
+	ifdef CONFIG_SND_SOC_GVM
+		include $(AUDIO_ROOT)/config/gvmauto.conf
+		export
+		INCS    +=  -include $(AUDIO_ROOT)/config/gvmautoconf.h
+	endif
 	ifdef CONFIG_SND_SOC_SA8255
 		include $(AUDIO_ROOT)/config/sa8255auto.conf
 		export
