asoc: add change to enable audioreah for 8155
Enable machine driver to bringup Audioreach

Change-Id: I6fdb0dca1613224fee81d21c9391b5ecaa5a1b84
Signed-off-by: ftong <quic_ftong@quicinc.com>

--- a/asoc/Kbuild
+++ b/asoc/Kbuild
@@ -225,7 +225,7 @@ endif
 
 # for sa8155 sound card driver
 ifdef CONFIG_SND_SOC_SA8155
-	MACHINE_OBJS += sa8155.o
+	MACHINE_OBJS += auto_spf_dummy.o
 endif
 
 # for sa8255 sound card driver
