--- a/config/sa8155auto.conf
+++ b/config/sa8155auto.conf
@@ -1,16 +1,14 @@
-CONFIG_MSM_QDSP6_APRV2_RPMSG=m
-CONFIG_MSM_QDSP6_SSR=m
-CONFIG_MSM_ADSP_LOADER=m
-CONFIG_MSM_QDSP6_NOTIFIER=m
-CONFIG_SND_SOC_MSM_QDSP6V2_INTF=m
-CONFIG_SND_SOC_QDSP6V2=m
-CONFIG_QTI_PP=m
-CONFIG_SND_HWDEP_ROUTING=m
-CONFIG_DTS_EAGLE=m
-CONFIG_DOLBY_DS2=m
-CONFIG_DOLBY_LICENSE=m
-CONFIG_SND_SOC_MSM_STUB=m
-CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=m
-CONFIG_MSM_QDSP6V2_CODECS=m
-CONFIG_SND_EVENT=m
-CONFIG_SND_SOC_SA8155=m
+export CONFIG_MSM_ADSP_LOADER=m
+export CONFIG_MSM_QDSP6_SSR=m
+export CONFIG_MSM_QDSP6_NOTIFIER=m
+export CONFIG_SND_SOC_MSM_QDSP6V2_INTF=m
+export CONFIG_SND_EVENT=m
+export CONFIG_MSM_QDSP6_GPR_RPMSG=m
+export CONFIG_AUDIO_PKT=m
+export CONFIG_AUDIO_PKT_ION=m
+export CONFIG_AUDIO_PRM=m
+export CONFIG_SPF_CORE=m
+export CONFIG_SND_SOC_QDSP6V2=m
+export CONFIG_SND_SOC_MSM_STUB=m
+export CONFIG_SND_SOC_SA8155=m
+export CONFIG_MSM_QDSP6_PDR=m
