audio-kernel: Update Audio DIR for SA525
Update audio dir to non tech-pack

Change-Id: I8e03918eaf6ec99b4f7d591f0250930f9412ebdf
Signed-off-by: Bala Murali Krishna Manchala <quic_bmanchal@quicinc.com>

--- a/ipc/Kbuild
+++ b/ipc/Kbuild
@@ -11,7 +11,11 @@ endif
 KDIR := $(TOP)/kernel/msm-5.4
 
 ifeq ($(KERNEL_BUILD), 1)
-	AUDIO_ROOT := $(KDIR)/techpack/audio
+	ifeq ($(TARGET_SUPPORT), sa525m)
+		AUDIO_ROOT := $(shell pwd)/../../../../vendor/qcom/opensource/audio-kernel
+	else
+		AUDIO_ROOT := $(KDIR)/techpack/audio
+	endif
 endif
 
 ifeq ($(TARGET_SUPPORT), sa525m)
