--- a/asoc/codecs/Kbuild
+++ b/asoc/codecs/Kbuild
@@ -9,8 +9,12 @@ endif
 ifeq ($(KERNEL_BUILD), 1)
 	# These are configurable via Kconfig for kernel-based builds
 	# Need to explicitly configure for Android-based builds
-	AUDIO_BLD_DIR := $(shell pwd)/kernel/msm-5.4
-	AUDIO_ROOT := $(AUDIO_BLD_DIR)/techpack/audio
+	ifeq ($(TARGET_SUPPORT), sa525m)
+		AUDIO_ROOT := $(shell pwd)/../../../../vendor/qcom/opensource/audio-kernel
+	else
+		AUDIO_BLD_DIR := $(shell pwd)/kernel/msm-5.4
+		AUDIO_ROOT := $(AUDIO_BLD_DIR)/techpack/audio
+	endif
 endif
 
 ifeq ($(TARGET_SUPPORT), sa525m)
