--- a/config/sa8255auto.conf
+++ b/config/sa8255auto.conf
@@ -11,3 +11,5 @@ export CONFIG_SPF_CORE=m
 export CONFIG_SND_SOC_QDSP6V2=m
 export CONFIG_SND_SOC_MSM_STUB=m
 export CONFIG_SND_SOC_SA8255_AUTO_SPF=m
+export CONFIG_PINCTRL_LPI=m
+export CONFIG_SND_SOC_WCD9XXX_V2=m
