dsp: add audio coupled ssr driver
For MDF and AMS, audio needs to restart master proc and satellite procs
if one of them crashes. The recovery strategy for remoteproc is to restart
the crashed one only.
Thus, introduce the driver to restart the rest.

Change-Id: Id6c8792b95587612944175182438b42c0a4c2830

--- a/dsp/Kbuild
+++ b/dsp/Kbuild
@@ -187,6 +187,10 @@ ifdef CONFIG_MSM_ADSP_LOADER
 ADSP_LOADER_OBJS += adsp-loader.o
 endif
 
+ifdef CONFIG_MSM_COUPLED_SSR
+COUPLED_SSR_OBJS += audio_coupled_ssr.o
+endif
+
 ifdef CONFIG_MSM_QDSP6_PDR
 QDSP6_PDR_OBJS += audio_pdr.o
 endif
@@ -269,6 +273,9 @@ q6_dlkm-y := $(Q6_OBJS)
 
 obj-$(CONFIG_MSM_ADSP_LOADER) += adsp_loader_dlkm.o
 adsp_loader_dlkm-y := $(ADSP_LOADER_OBJS)
+
+obj-$(CONFIG_MSM_COUPLED_SSR) += coupled_ssr_dlkm.o
+coupled_ssr_dlkm-y := $(COUPLED_SSR_OBJS)
 
 obj-$(CONFIG_MSM_QDSP6_PDR) += q6_pdr_dlkm.o
 q6_pdr_dlkm-y := $(QDSP6_PDR_OBJS)
