--- a/config/sa8255auto.conf
+++ b/config/sa8255auto.conf
@@ -13,3 +13,4 @@ export CONFIG_SND_SOC_MSM_STUB=m
 export CONFIG_SND_SOC_SA8255_AUTO_SPF=m
 export CONFIG_PINCTRL_LPI=m
 export CONFIG_SND_SOC_WCD9XXX_V2=m
+export CONFIG_DIGITAL_CDC_RSC_MGR=m
