qcacld-3.0: Makefile: Enable CNSS2 configs
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>
Signed-off-by: hachiman270 <unformed8981@gmail.com>

--- a/qcom/opensource/wlan/qcacld-3.0/Makefile
+++ b/qcom/opensource/wlan/qcacld-3.0/Makefile
@@ -20,6 +20,14 @@ KBUILD_OPTIONS += \
     WLAN_FW_API=sm6225-modules/qcom/opensource/wlan/fw-api \
     CONFIG_QCA_CLD_WLAN=m \
     CONFIG_CNSS_QCA6390=y \
+    CONFIG_CNSS_OUT_OF_TREE=y \
+    CONFIG_CNSS2=m \
+    CONFIG_CNSS2_QMI=y \
+    CONFIG_CNSS_QMI_SVC=m \
+    CONFIG_CNSS_PLAT_IPC_QMI_SVC=m \
+    CONFIG_CNSS_GENL=m \
+    CONFIG_WCNSS_MEM_PRE_ALLOC=m \
+    CONFIG_CNSS_UTILS=m \
     WLAN_PROFILE=qca6390 \
     DYNAMIC_SINGLE_CHIP= \
     MODNAME=qca6390 \
