qcacld-3.0: Makefile: Add kbuild extra symbols
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>
Signed-off-by: hachiman270 <unformed8981@gmail.com>

--- a/qcom/opensource/wlan/qcacld-3.0/Makefile
+++ b/qcom/opensource/wlan/qcacld-3.0/Makefile
@@ -36,6 +36,8 @@ KBUILD_OPTIONS += \
     WLAN_CTRL_NAME=wlan
 endif
 
+KBUILD_OPTIONS += KBUILD_EXTRA_SYMBOLS=$(OUT_DIR)/../sm6225-modules/qcom/opensource/wlan/platform/Module.symvers
+
 all:
 	$(MAKE) -C $(KERNEL_SRC) M=$(M) modules $(KBUILD_OPTIONS)
 
