display-drivers: add build support for trinket
Add compilation support for trinket platform.

Change-Id: I401327f7cb040007cf82d223a03ce0770177c928
Signed-off-by: Deven Solanki <quic_dsolanki@quicinc.com>

--- a/msm/Kbuild
+++ b/msm/Kbuild
@@ -42,6 +42,11 @@ else
 endif
 endif
 
+ifeq ($(CONFIG_ARCH_TRINKET), y)
+	include $(DISPLAY_ROOT)/config/trinketdisp.conf
+	LINUX_INC += -include $(DISPLAY_ROOT)/config/trinketdispconf.h
+endif
+
 ifeq (y, $(findstring y, $(CONFIG_ARCH_SA8155) $(CONFIG_ARCH_SA6155) $(CONFIG_ARCH_SA8195)))
 	include $(DISPLAY_ROOT)/config/augen3disp.conf
 	LINUX_INC += -include $(DISPLAY_ROOT)/config/augen3dispconf.h
