touch-drivers: Makefile: Consider all necessary extra symbols
Signed-off-by: hachiman270 <hachiman270@gmail.com>

--- a/qcom/opensource/touch-drivers/Makefile
+++ b/qcom/opensource/touch-drivers/Makefile
@@ -1,8 +1,8 @@
-
-KBUILD_OPTIONS+= TOUCH_ROOT=$(KERNEL_SRC)/$(M)
+KBUILD_OPTIONS += TOUCH_ROOT=$(KERNEL_SRC)/$(M)
 KBUILD_OPTIONS += MODNAME?=touch_dlkm
 
-KBUILD_EXTRA_SYMBOLS += $(M)/../display-drivers/msm/dsi/Module.symvers
+#KBUILD_EXTRA_SYMBOLS += $(M)/../display-drivers/msm/dsi/Module.symvers
+KBUILD_EXTRA_SYMBOLS +=$(OUT)/obj/sm6225_modules/qcom/opensource/display-drivers/msm/dsi/Module.symvers
 ifeq ($(SEC_SAMSUNG_EXPERIENCE_PLATFORM_CATEGORY), sep_lite_new)
 	KBUILD_EXTRA_SYMBOLS += drivers/samsung/bsp/class/Module.symvers
 endif
@@ -15,7 +15,7 @@ modules_install:
 	$(MAKE) INSTALL_MOD_STRIP=1 -C $(KERNEL_SRC) M=$(M) modules_install
 
 %:
-	$(MAKE) -C $(KERNEL_SRC) M=$(M) $@ $(KBUILD_OPTIONS)
+	$(MAKE) -C $(KERNEL_SRC) M=$(M) $@ $(KBUILD_OPTIONS) $(KBUILD_EXTRA_SYMBOLS)
 
 clean:
 	rm -f *.o *.ko *.mod.c *.mod.o *~ .*.cmd Module.symvers
