--- a/qcom/opensource/wlan/platform/Makefile
+++ b/qcom/opensource/wlan/platform/Makefile
@@ -28,6 +28,8 @@ KBUILD_OPTIONS += CONFIG_CNSS_PLAT_IPC_QMI_SVC=m
 KBUILD_OPTIONS += CONFIG_CNSS_GENL=m
 KBUILD_OPTIONS += CONFIG_WCNSS_MEM_PRE_ALLOC=m
 KBUILD_OPTIONS += CONFIG_CNSS_UTILS=m
+
+KBUILD_OPTIONS += KBUILD_EXTRA_SYMBOLS=$(OUT_DIR)/../sm6225-modules/qcom/opensource/securemsm-kernel/Module.symvers
 endif
 endif
 
