disp: msm: dsi: add 14nm dsi pll support
Add DSI 14nm PLL support.

Change-Id: I87cdcbfdf6a8bc387eb19cb10a4da8aae642f1b7
Signed-off-by: Deven Solanki <quic_dsolanki@quicinc.com>

--- a/msm/Kbuild
+++ b/msm/Kbuild
@@ -234,6 +234,7 @@ msm_drm-$(CONFIG_DRM_MSM_DSI) += dsi/dsi_phy.o \
 				 dsi/dsi_pll.o \
 				 dsi/dsi_pll_5nm.o \
 				 dsi/dsi_pll_4nm.o \
+				 dsi/dsi_pll_14nm.o \
 				 dsi/dsi_ctrl_hw_cmn.o \
 				 dsi/dsi_ctrl_hw_2_2.o \
 				 dsi/dsi_ctrl.o \
