--- a/qcom/opensource/touch-drivers/Makefile
+++ b/qcom/opensource/touch-drivers/Makefile
@@ -2,6 +2,12 @@
 KBUILD_OPTIONS+= TOUCH_ROOT=$(KERNEL_SRC)/$(M)
 KBUILD_OPTIONS += MODNAME?=touch_dlkm
 
+KBUILD_EXTRA_SYMBOLS += $(M)/../display-drivers/msm/dsi/Module.symvers
+ifeq ($(SEC_SAMSUNG_EXPERIENCE_PLATFORM_CATEGORY), sep_lite_new)
+	KBUILD_EXTRA_SYMBOLS += drivers/samsung/bsp/class/Module.symvers
+endif
+export KBUILD_EXTRA_SYMBOLS
+
 all:
 	$(MAKE) -C $(KERNEL_SRC) M=$(M) modules $(KBUILD_OPTIONS)
 
