--- a/qcom/opensource/wlan/qcacld-3.0/Kbuild
+++ b/qcom/opensource/wlan/qcacld-3.0/Kbuild
@@ -4321,6 +4321,18 @@ ifdef CONFIG_MAX_CLIENTS_ALLOWED
 ccflags-y += -DWLAN_MAX_CLIENTS_ALLOWED=$(CONFIG_MAX_CLIENTS_ALLOWED)
 endif
 
+CONFIG_WLAN_SAMSUNG_FEATURE=y
+
+ifeq ($(CONFIG_WLAN_SAMSUNG_FEATURE), y)
+EXTRA_CFLAGS += -DCONFIG_SEC
+EXTRA_CFLAGS += -DSEC_READ_MACADDR_SYSFS
+EXTRA_CFLAGS += -DSEC_CONFIG_PSM_SYSFS
+EXTRA_CFLAGS += -DSEC_CONFIG_POWER_BACKOFF
+EXTRA_CFLAGS += -DSEC_CONFIG_WLAN_BEACON_CHECK
+EXTRA_CFLAGS += -DSEC_WRITE_VERSION_IN_SYSFS
+EXTRA_CFLAGS += -DSEC_WRITE_SOFTAP_INFO_IN_SYSFS
+endif
+
 ifeq ($(CONFIG_WLAN_FEATURE_RX_BUFFER_POOL), y)
 cppflags-y += -DWLAN_FEATURE_RX_PREALLOC_BUFFER_POOL
 ifdef CONFIG_DP_RX_BUFFER_POOL_SIZE
